--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,7 +5,9 @@ RUN apt-get update && \
 	apt-get install -y nginx openssl && \
 	rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /etc/nginx/sll && \
+RUN mkdir -p /etc/nginx/ssl && \
 	openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt -subj "/CN=hirwatan.42.fr"
 
 COPY ./conf/nginx.conf /etc/nginx/http.d/
+
+CMD ["nginx", "-g", "daemon off;"]
