--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,13 +1,20 @@
-#debian11かな？
 FROM debian:bullseye
 
 RUN apt-get update && \
-	apt-get install -y nginx openssl && \
-	rm -rf /var/lib/apt/lists/*
+    apt-get install -y nginx openssl && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /etc/nginx/ssl && \
-	openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt -subj "/CN=hirwatan.42.fr"
+    openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/nginx/ssl/nginx.key \
+    -out /etc/nginx/ssl/nginx.crt \
+    -subj "/CN=hirwatan.42.fr"
 
-COPY ./conf/nginx.conf /etc/nginx/http.d/
+COPY ./conf/nginx.conf /etc/nginx/sites-available/default
+
+RUN mkdir -p /var/www/html && \
+    chown -R www-data:www-data /var/www/html
+
+EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
