--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,12 +4,18 @@ RUN apt-get update && \
     apt-get install -y mariadb-server mariadb-client && \
     rm -rf /var/lib/apt/lists/*
 
-COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d.50-server.conf
+COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-COPY /tools/init_db.sh /usr/local/bin/
+COPY ./tools/init_db.sh /usr/local/bin/
 
-RUN chmod 755 /usr/local/bin/init_db.sh
+RUN chmod +x /usr/local/bin/init_db.sh
+
+RUN mkdir -p /var/run/mysqld && \
+    chown -R mysql:mysql /var/run/mysqld && \
+    chown -R mysql:mysql /var/lib/mysql
 
 EXPOSE 3306
 
-CMD ["init_db.sh"]
+USER mysql
+
+CMD ["/usr/local/bin/init_db.sh"]
