--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,14 +12,19 @@ server {
     root /var/www/html;
     index index.php index.html index.htm;
 
+    client_max_body_size 100M;
+
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;
     }
 
@@ -27,8 +32,22 @@ server {
         deny all;
     }
 
-    location ~* \.(css|gif|ico|jpeg|jpg|js|png)$ {
+    location ~ /wp-config\.php {
+        deny all;
+    }
+
+    location ~* \.(css|gif|ico|jpeg|jpg|js|png|woff|woff2|ttf)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+    }
+
+    location /wp-admin/ {
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_pass wordpress:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
     }
 }
