--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,83 +1,20 @@
 services:
-  mariadb:
-    build: ./requirements/mariadb
-    container_name: mariadb
-    restart: unless-stopped
-    networks:
-      - inception
-    volumes:
-      - mariadb_data:/var/lib/mysql
-    environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-    secrets:
-      - db_root_password
-      - db_password
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "--silent"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
   wordpress:
-    build: ./requirements/wordpress
-    container_name: wordpress
-    restart: unless-stopped
+    build: ./wordpress
+    ports:
+     - "9000:9000"
+     - "3306:3306"
+    environment:
+      - WORDPRESS_DB_HOST={$WORDPRESS_DB_HOST}
+      - WORDPRESS_DB_NAME={$WORDPRESS_DB_NAME}
+      - WORDPRESS_DB_USER={$WORDPRESS_DB_USER}
+      - WORDPRESS_ADMIN_HOST={$WORDPRESS_ADMIN_HOST}
+      - WORDPRESS_ADMIN_PASSWORD={$WORDPRESS_ADMIN_PASSWORD}
+      - WORDPRESS_ADMIN_EMAIL={$WORDPRESS_ADMIN_EMAIL}
+      - WORDPRESS_USER={$WORDPRESS_USER}
+      - WORDPRESS_USER_PASSWORD={$WORDPRESS_USER_PASSWORD}
+      - WORDPRESS_USER_EMAIL={$WORDPRESS_USER_EMAIL}
     depends_on:
       - mariadb
-    networks:
-      - inception
     volumes:
-      - wordpress_data:/var/www/html
-    environment:
-      - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
-      - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
-      - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - DOMAIN_NAME=${DOMAIN_NAME}
-      - WORDPRESS_ADMIN_USER=${WORDPRESS_ADMIN_USER}
-      - WORDPRESS_ADMIN_PASSWORD=${WORDPRESS_ADMIN_PASSWORD}
-      - WORDPRESS_ADMIN_EMAIL=${WORDPRESS_ADMIN_EMAIL}
-      - WORDPRESS_USER=${WORDPRESS_USER}
-      - WORDPRESS_USER_PASSWORD=${WORDPRESS_USER_PASSWORD}
-      - WORDPRESS_USER_EMAIL=${WORDPRESS_USER_EMAIL}
-    secrets:
-      - db_password
-
-  nginx:
-    build: ./requirements/nginx
-    container_name: nginx
-    restart: unless-stopped
-    depends_on:
-      - wordpress
-    ports:
-      - "443:443"
-    networks:
-      - inception
-    volumes:
-      - wordpress_data:/var/www/html
-
-volumes:
-  mariadb_data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${DATA_PATH}/mariadb
-  wordpress_data:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${DATA_PATH}/wordpress
-
-networks:
-  inception:
-    driver: bridge
-
-secrets:
-  db_root_password:
-    file: ../secrets/db_root_password.txt
-  db_password:
-    file: ../secrets/db_password.txt
+      - ./wordpress:var/www/html
