--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,36 +1,34 @@
+# requirements/wordpress/Dockerfile
 FROM debian:bullseye
 
-RUN apt-get update && \
-    apt-get install -y \
-    php7.4-fpm \
-    php7.4-mysql \
-    php7.4-curl \
-    php7.4-gd \
-    php7.4-intl \
-    php7.4-mbstring \
-    php7.4-soap \
-    php7.4-xml \
-    php7.4-xmlrpc \
-    php7.4-zip \
-    php7.4-cli \
-    curl \
+# PHP-FPMとWordPressに必要なパッケージをインストール
+RUN apk update && apk add --no-cache \
+    php81 \
+    php81-fpm \
+    php81-mysqli \
+    php81-json \
+    php81-curl \
+    php81-dom \
+    php81-exif \
+    php81-fileinfo \
+    php81-mbstring \
+    php81-openssl \
+    php81-xml \
+    php81-zip \
     wget \
-    && rm -rf /var/lib/apt/lists/*
+    tar
 
-RUN curl -O https://raw.githubusercontent.com/wp-cli/wp-cli/v2.8.1/wp-cli.phar && \
-    chmod +x wp-cli.phar && \
-    mv wp-cli.phar /usr/local/bin/wp
+# WordPressをダウンロード
+WORKDIR /var/www/html
+RUN wget https://wordpress.org/latest.tar.gz && \
+    tar -xzf latest.tar.gz && \
+    mv wordpress/* . && \
+    rm -rf wordpress latest.tar.gz
 
-RUN mkdir -p /var/www/html && \
-    chown -R www-data:www-data /var/www/html
-
-COPY ./tools/setup_wordpress.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/setup_wordpress.sh
-
-RUN sed -i 's/listen = \/run\/php\/php7.4-fpm.sock/listen = 9000/' /etc/php/7.4/fpm/pool.d/www.conf
+# PHP-FPMの設定
+RUN sed -i 's/listen = 127.0.0.1:9000/listen = 9000/g' /etc/php81/php-fpm.d/www.conf
 
 EXPOSE 9000
 
-WORKDIR /var/www/html
-
-CMD ["/usr/local/bin/setup_wordpress.sh"]
+# デーモンとして起動（フォアグラウンド）
+CMD ["php-fpm81", "-F"]
