--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,33 +2,40 @@
 FROM debian:bullseye
 
 # PHP-FPMとWordPressに必要なパッケージをインストール
-RUN apk update && apk add --no-cache \
-    php81 \
-    php81-fpm \
-    php81-mysqli \
-    php81-json \
-    php81-curl \
-    php81-dom \
-    php81-exif \
-    php81-fileinfo \
-    php81-mbstring \
-    php81-openssl \
-    php81-xml \
-    php81-zip \
+RUN apt-get update && apt-get install -y \
+    php7.4-fpm \
+    php7.4-mysqli \
+    php7.4-curl \
+    php7.4-dom \
+    php7.4-mbstring \
+    php7.4-xml \
+    php7.4-zip \
+    php7.4-gd \
+    php7.4-intl \
+    php7.4-bcmath \
     wget \
-    tar
+    curl \
+    mariadb-client \
+    && rm -rf /var/lib/apt/lists/*
 
-# WordPressをダウンロード
+# WP-CLIをインストール
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+    chmod +x wp-cli.phar && \
+    mv wp-cli.phar /usr/local/bin/wp
+
+# PHP-FPMの設定ディレクトリを作成
+RUN mkdir -p /run/php
+
+# PHP-FPM設定ファイルをコピー
+COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+
+# セットアップスクリプトをコピー
+COPY ./tools/setup_wordpress.sh /usr/local/bin/setup_wordpress.sh
+RUN chmod +x /usr/local/bin/setup_wordpress.sh
+
 WORKDIR /var/www/html
-RUN wget https://wordpress.org/latest.tar.gz && \
-    tar -xzf latest.tar.gz && \
-    mv wordpress/* . && \
-    rm -rf wordpress latest.tar.gz
-
-# PHP-FPMの設定
-RUN sed -i 's/listen = 127.0.0.1:9000/listen = 9000/g' /etc/php81/php-fpm.d/www.conf
 
 EXPOSE 9000
 
-# デーモンとして起動（フォアグラウンド）
-CMD ["php-fpm81", "-F"]
+# セットアップスクリプトを実行
+CMD ["/usr/local/bin/setup_wordpress.sh"]
