--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,20 +1,76 @@
+version: '3.8'
+
 services:
-  wordpress:
-    build: ./wordpress
-    ports:
-     - "9000:9000"
-     - "3306:3306"
+  mariadb:
+    container_name: mariadb
+    build: ./requirements/mariadb
+    restart: unless-stopped
+    networks:
+      - inception
+    volumes:
+      - mariadb_data:/var/lib/mysql
     environment:
-      - WORDPRESS_DB_HOST={$WORDPRESS_DB_HOST}
-      - WORDPRESS_DB_NAME={$WORDPRESS_DB_NAME}
-      - WORDPRESS_DB_USER={$WORDPRESS_DB_USER}
-      - WORDPRESS_ADMIN_HOST={$WORDPRESS_ADMIN_HOST}
-      - WORDPRESS_ADMIN_PASSWORD={$WORDPRESS_ADMIN_PASSWORD}
-      - WORDPRESS_ADMIN_EMAIL={$WORDPRESS_ADMIN_EMAIL}
-      - WORDPRESS_USER={$WORDPRESS_USER}
-      - WORDPRESS_USER_PASSWORD={$WORDPRESS_USER_PASSWORD}
-      - WORDPRESS_USER_EMAIL={$WORDPRESS_USER_EMAIL}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    env_file:
+      - .env
+
+  wordpress:
+    container_name: wordpress
+    build: ./requirements/wordpress
+    restart: unless-stopped
+    networks:
+      - inception
     depends_on:
       - mariadb
     volumes:
-      - ./wordpress:var/www/html
+      - wordpress_data:/var/www/html
+    environment:
+      - DOMAIN_NAME=${DOMAIN_NAME}
+      - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
+      - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
+      - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - WORDPRESS_ADMIN_USER=${WORDPRESS_ADMIN_USER}
+      - WORDPRESS_ADMIN_PASSWORD=${WORDPRESS_ADMIN_PASSWORD}
+      - WORDPRESS_ADMIN_EMAIL=${WORDPRESS_ADMIN_EMAIL}
+      - WORDPRESS_USER=${WORDPRESS_USER}
+      - WORDPRESS_USER_PASSWORD=${WORDPRESS_USER_PASSWORD}
+      - WORDPRESS_USER_EMAIL=${WORDPRESS_USER_EMAIL}
+    env_file:
+      - .env
+
+  nginx:
+    container_name: nginx
+    build: ./requirements/nginx
+    restart: unless-stopped
+    networks:
+      - inception
+    depends_on:
+      - wordpress
+    ports:
+      - "443:443"
+    volumes:
+      - wordpress_data:/var/www/html
+    env_file:
+      - .env
+
+networks:
+  inception:
+    driver: bridge
+
+volumes:
+  mariadb_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/mels/data/mariadb
+  wordpress_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/mels/data/wordpress
