--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -8,7 +8,7 @@ RUN mkdir -p /etc/nginx/ssl && \
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/nginx/ssl/nginx.key \
     -out /etc/nginx/ssl/nginx.crt \
-    -subj "/CN=hirwatan.42.fr"
+    -subj "/CN=mels.42.fr"
 
 RUN mkdir -p /var/www/html && \
     chown -R www-data:www-data /var/www/html
