fix/パスワードの持ち方変更、コメント追加

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,8 +13,9 @@ services:
     environment:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    secrets:
+      - db_password
+      - db_root_password
     env_file:
       - .env
 
@@ -34,13 +35,14 @@ services:
       - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
       - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
       - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - WORDPRESS_ADMIN_USER=${WORDPRESS_ADMIN_USER}
-      - WORDPRESS_ADMIN_PASSWORD=${WORDPRESS_ADMIN_PASSWORD}
       - WORDPRESS_ADMIN_EMAIL=${WORDPRESS_ADMIN_EMAIL}
       - WORDPRESS_USER=${WORDPRESS_USER}
       - WORDPRESS_USER_PASSWORD=${WORDPRESS_USER_PASSWORD}
       - WORDPRESS_USER_EMAIL=${WORDPRESS_USER_EMAIL}
+    secrets:
+      - db_password
+      - wp_admin_password
     env_file:
       - .env
 
@@ -70,10 +72,18 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/hirwatan/data/mariadb
+      device: ${HOST_DATA_DIR}/mariadb
   wordpress_data:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /home/hirwatan/data/wordpress
+      device: ${HOST_DATA_DIR}/wordpress
+
+secrets:
+  db_password:
+    file: ../secrets/db_password.txt
+  db_root_password:
+    file: ../secrets/db_root_password.txt
+  wp_admin_password:
+    file: ../secrets/wp_admin_password.txt
