--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -1,10 +1,12 @@
 # domain
-DOMAIN_NAME=
+DOMAIN_NAME=login.42.fr
+
+# host data directory
+HOST_DATA_DIR=/home/login/data
 
 # db
 MYSQL_DATABASE=
 MYSQL_USER=
-MYSQL_ROOT_PASSWORD=
 MYSQL_PASSWORD=
 
 # db
@@ -13,7 +15,7 @@ WORDPRESS_DB_NAME=
 WORDPRESS_DB_USER=
 
 # admin
-WORDPRESS_ADMIN_USER= 
+WORDPRESS_ADMIN_USER=
 WORDPRESS_ADMIN_PASSWORD=
 WORDPRESS_ADMIN_EMAIL=
 
