--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl http2;
-    server_name mels.42.fr;
+    server_name hirwatan.42.fr;
 
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
